# Adaboost

./: CMakeLists.txt  Main.cpp
boosting/: AdaBoost.cpp  AdaBoost.h  ViolaJones.cpp  ViolaJones.h
boosting/classifiers/: CascadeClassifier.cpp  CascadeClassifier.h  Stage.cpp  Stage.h  StrongClassifier.cpp  StrongClassifier.h  WeakClassifier.cpp  WeakClassifier.h
boosting/features/: Data.cpp  Data.h  HaarFeatures.cpp  HaarFeatures.h
boosting/utils/: Face.cpp  Face.h  IntegralImage.cpp  IntegralImage.h  Utils.hpp
facedetector/: FaceDetector.cpp  FaceDetector.h
